[package]
name = "rust-cicd"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
tikv-jemallocator = { version = "0.6.0", features = ["unprefixed_malloc_on_supported_platforms", "profiling"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"], default-features = false }
